Correcting footer link spacing

--- a/style.css
+++ b/style.css
@@ -48,5 +48,5 @@ section li {
 /* styling footer links */
 footer a {
   color: darkslategrey;
-  padding-bottom: 10px;
+  padding: 10px;
 }
